--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-backend/models/__pycache__/
-backend/routes/__pycache__/
+backend/models/__pycache__/*
+backend/routes/__pycache__/*
 backend/__pycache__/*
