jwt set token secret key

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 FLASK_APP=backend/application.py
 SQLALCHEMY_DATABASE_URI=sqlite:///db2.sqlite
-SECRET_KEY=test_secret
+# SECRET_KEY=test_secret
+JWT_SECRET_KEY=emmanuelEseImole  # a highly secured secret key
 PORT=5001
