--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-backend/models/__pycache__/*
-backend/routes/__pycache__/*
-backend/__pycache__/*
 __pycache__
+backend/__pycache__
+backend/models/__pycache__
+backend/routes/__pycache__
 frontend/metafora/node_modules
